# DopamineVLA

./: .gitignore  AGENTS.md  README.md  VELA_POSTMORTEM.md  pyproject.toml  pyrefly.toml
.agents/skills/compose-commit/: SKILL.md
dopaminevla/: __init__.py
dopaminevla/models/: __init__.py  dopamine.py
dopaminevla/models/dopamine/: __init__.py  action.py  base.py  configuration_dopaminevla.py  connector.py  crop.py  dopamine.py  generation.py  inference.py  merger.py  model.py  outputs.py  vision.py
dopaminevla/models/siglino/: NOTICE  README.md  pca_maps.py  requirements.txt  setup.py
dopaminevla/models/siglino/evals/image_text/: aircraft.py  caltech101.py  cub.py  dtd.py  flowers102.py  food101.py  imagenet.py  utils.py
dopaminevla/models/siglino/evals/knn/: aircraft.py  cub.py  dtd.py  flowers102.py  food101.py  imagenet.py  utils.py
dopaminevla/models/siglino/evals/retrieval/: flickr.py  mscoco.py  utils.py
dopaminevla/models/siglino/evals/segmentation/: ade20k.py  cityscapes.py  pascal_voc.py  utils.py
dopaminevla/models/siglino/siglino/: __init__.py  attention.py  configs.py  hf_integration.py  image_processor.py  model.py  moe.py  rope.py  utils.py
tests/: test_dopamine.py  test_pca_maps.py  test_siglino.py
