[project]
name = "dopaminevla"
version = "0.1.0"
description = "Experimental setup of dopamine on VLAs, which consists on realtime Reinforcement Learning with eplicit decay "
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets",
    "einops",
    "ggml-python",
    "matplotlib",
    "numpy",
    "onnx",
    "onnxscript",
    "onnxruntime",
    "open-clip-torch",
    "pillow",
    "scikit-learn",
    "scipy",
    "siglino",
    "torch",
    "torchao",
    "torchvision",
    "tqdm",
    "transformers",
    "trl",
    "unsloth",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[[tool.uv.index]]
name = "ggml"
url = "https://abetlen.github.io/ggml-python/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchao = { index = "pytorch" }
ggml-python = { index = "ggml" }
siglino = { path = "dopaminevla/models/siglino" }

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (hub downloading, large model inference)"]

[tool.setuptools]
package-dir = { "dopaminevla" = "dopaminevla" }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
